# Cashback-Strategy

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
app/: package.json  tailwind.config.ts  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/dashboard/: page.tsx
app/src/app/treasury/: page.tsx
app/src/lib/: cashback.ts
client/: package.json  tsconfig.json
client/src/: index.ts
docs/: ARCHITECTURE.md  TOKENOMICS.md
migrations/: deploy.ts
programs/cashback_strategy/: Cargo.toml
programs/cashback_strategy/src/: lib.rs
scripts/: initialize-example.ts  localnet.sh
tests/: cashback_strategy.ts
