[package]
name = "cashback_strategy"
version = "0.1.0"
description = "Cashback Strategy Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cashback_strategy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
id = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
